# live_FLIM

./: pyproject.toml
.kiro/specs/flim-processing-library/: design.md  requirements.md  tasks.md
examples/: 01_basic_usage.ipynb  02B_streaming_example.ipynb  02B_streaming_marimo_README.md  02_streaming_example.ipynb  03_selection_analysis.ipynb  README.md  Untitled.ipynb  marimo-streamer.py
examples/__marimo__/session/: 02B_streaming_example_marimo_nb.py.json
examples/marimo_trials/: .temp_check_import.py  02B_streaming.py  02B_streaming_example_marimo_nb.py  02B_streaming_marimo.py  02B_streaming_marimo_nb.py  blah.py  blah_mo.py  marimo-streamer.py  marimo_debug_out.txt  marimo_out.txt  marimo_out_venv.txt  udp_scan.ipynb
examples/marimo_trials/__marimo__/session/: blah_mo.py.json  marimo-streamer.py.json
src/flim_processing/: __init__.py  _data_manager.py  _dataclasses.py  _fitting_engine.py  _phasor_computer.py  _stream_receiver.py
src/flim_processing/_tests/: __init__.py  _test_utils.py  test_data_manager.py  test_dataclasses.py  test_fitting_engine.py  test_phasor_computer.py  test_stream_receiver.py
