[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flim-processing"
version = "0.1.0"
description = "A standalone Python library for FLIM data processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Kevin Tan", email = "kktangent@gmail.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "flimlib>=1.0",
    "matplotlib>=3.3",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=7.0",
    "pytest-cov",
]
notebook = [
    "jupyter>=1.0",
    "ipywidgets",
]

[tool.setuptools_scm]
write_to = "src/napari_live_flim/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
